src/objects/Charket__Skill__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Handler__c</fullName>
        <label>Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__IsDisplayInLiveChat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display in Live Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__IsInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charket__ValidFor__c</fullName>
        <label>Valid For (mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Charket Skill</label>
    <listViews>
        <fullName>Charket__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charket Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>